--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,19 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.18",
     "@nestjs/platform-express": "^7.6.18",
+    "@nestjs/typeorm": "^7.1.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.1.0"
+    "rxjs": "^7.1.0",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0"
+    "@jest/types": "^27.0.2",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/testing": "^7.6.18",
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.4",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0"
   }
 }
