--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,9 @@
   "author": "onichandame",
   "license": "MIT",
   "dependencies": {
+    "@backend/config": "^0.0.0",
+    "@backend/db-connection": "^0.0.0",
+    "@nestjs-query/query-graphql": "^0.27.0",
     "@nestjs-query/query-typeorm": "^0.27.0",
     "@nestjs/common": "^7.6.18",
     "@nestjs/config": "^0.6.3",
@@ -19,6 +22,9 @@
     "@nestjs/typeorm": "^7.1.5",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
+    "dataloader": "^2.0.0",
+    "graphql": "^15.5.0",
+    "graphql-subscriptions": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.1.0",
     "sqlite3": "^5.0.2",
