--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "description": "logbook for everyday",
   "workspaces": [
-    "backend",
-    "frontend"
+    "libs/*",
+    "apps/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install",
     "format": "pretty-quick --staged"
   },
@@ -31,9 +31,16 @@
   },
   "homepage": "https://github.com/onichandame/logbook#readme",
   "devDependencies": {
+    "@jest/types": "^27.0.2",
+    "@nestjs/testing": "^7.6.18",
+    "@nestjs/typeorm": "^7.1.5",
     "husky": "^6.0.0",
+    "jest": "^27.0.4",
     "lerna": "^4.0.0",
     "prettier": "^2.3.1",
-    "pretty-quick": "^3.1.1"
+    "pretty-quick": "^3.1.1",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   }
 }
