need to find a way to test migration

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "backend",
+  "name": "@apps/backend",
   "private": true,
   "version": "0.0.0",
   "description": "backend",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "nest start --watch --preserveWatchOutput",
-    "test": "jest"
+    "test": "jest",
+    "dev": "nest start --watch --preserveWatchOutput"
   },
   "author": "onichandame",
   "license": "MIT",
   "dependencies": {
-    "@backend/config": "^0.0.0",
-    "@backend/db-connection": "^0.0.0",
+    "@libs/config": "^0.0.0",
+    "@libs/model": "^0.0.0",
     "@nestjs-query/query-graphql": "^0.27.0",
     "@nestjs-query/query-typeorm": "^0.27.0",
     "@nestjs/common": "^7.6.18",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.18",
+    "@nestjs/graphql": "^7.11.0",
     "@nestjs/platform-express": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
+    "apollo-server-express": "^2.25.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "dataloader": "^2.0.0",
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.1",
