--- a/libs/config/package.json
+++ b/libs/config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@backend/config",
+  "name": "@libs/config",
   "version": "0.0.0",
   "description": "centralized configuration",
   "main": "dist/index",
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "tsc -p ./tsconfig.build.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "onichandame",
   "license": "MIT",
