--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,8 +25,10 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dataloader": "^2.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.1.0",
     "sqlite3": "^5.0.2",
@@ -38,7 +40,9 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/testing": "^7.6.18",
     "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/uuid": "^8.3.0",
     "jest": "^27.0.4",
     "ts-jest": "^27.0.3",
