--- a/libs/config/package.json
+++ b/libs/config/package.json
@@ -13,6 +13,8 @@
   "author": "onichandame",
   "license": "MIT",
   "dependencies": {
-    "@nestjs/config": "^0.6.3"
+    "@nestjs/common": "^7.6.18",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^7.6.18"
   }
 }
