--- a/libs/model/package.json
+++ b/libs/model/package.json
@@ -15,12 +15,21 @@
   "peerDependencies": {
     "@nestjs-query/query-graphql": "^0.27.0",
     "@nestjs/graphql": "^7.11.0",
-    "@nestjs/typeorm": "^7.1.5"
+    "@nestjs/typeorm": "^7.1.5",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
-    "@nestjs/typeorm": "^7.1.5"
+    "@nestjs/typeorm": "^7.1.5",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/uuid": "^8.3.0",
+    "typeorm": "^0.2.34"
   },
   "dependencies": {
-    "@libs/config": "^0.0.0"
+    "@libs/config": "^0.0.0",
+    "@nestjs-query/query-graphql": "^0.27.0",
+    "@nestjs/common": "^7.6.18",
+    "@nestjs/graphql": "^7.11.0",
+    "bcryptjs": "^2.4.3",
+    "uuid": "^8.3.2"
   }
 }
