done proxy and backend backbones. need frontend

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test:apps": "lerna --scope @apps/* run test",
     "pretest": "npm run build:libs",
     "test": "lerna run test",
-    "dev:backend": "lerna --scope @apps/backend run dev",
+    "dev:proxy": "cross-env PORT=3000 cross-env BACKEND_PORT=3002 cross-env FRONTEND_PORT=3001 lerna --scope @apps/proxy run dev",
+    "dev:backend": "cross-env PORT=3002 lerna --scope @apps/backend run dev",
+    "dev": "concurrently \"npm run dev:proxy\" \"npm run dev:backend\"",
     "prepare": "husky install",
     "format": "pretty-quick --staged"
   },
@@ -40,6 +42,8 @@
     "@jest/types": "^27.0.2",
     "@nestjs/testing": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
     "lerna": "^4.0.0",
