--- a/libs/react/package.json
+++ b/libs/react/package.json
@@ -12,16 +12,23 @@
   "author": "onichandame",
   "license": "MIT",
   "dependencies": {
-    "@libs/model": "^0.0.0",
+    "@apollo/client": "^3.3.20",
+    "@libs/gql": "^0.0.0",
+    "@libs/context": "^0.0.0",
     "@material-ui/core": "^4.11.4",
-    "react": "^17.0.2"
+    "formik": "^2.2.9",
+    "graphql": "^15.5.1",
+    "react": "^17.0.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "storybook-addon-apollo-client": "^4.0.8"
   }
 }
