--- a/libs/react/package.json
+++ b/libs/react/package.json
@@ -13,10 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/client": "^3.3.20",
-    "@libs/gql": "^0.0.0",
     "@libs/context": "^0.0.0",
+    "@libs/gql": "^0.0.0",
     "@material-ui/core": "^4.11.4",
     "formik": "^2.2.9",
+    "notistack": "^1.0.9",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
     "yup": "^0.32.9"
