--- a/libs/gql/package.json
+++ b/libs/gql/package.json
@@ -12,7 +12,7 @@
   },
   "author": "onichandame",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "@apollo/client": "^3.3.20",
     "graphql": "^15.5.1"
   }
