--- a/libs/react/package.json
+++ b/libs/react/package.json
@@ -12,15 +12,17 @@
   "author": "onichandame",
   "license": "MIT",
   "dependencies": {
-    "@apollo/client": "^3.3.20",
     "@libs/context": "^0.0.0",
     "@libs/gql": "^0.0.0",
     "@material-ui/core": "^4.11.4",
     "formik": "^2.2.9",
     "notistack": "^1.0.9",
-    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "yup": "^0.32.9"
+  },
+  "peerDependencies": {
+    "@apollo/client": "^3.3.20",
+    "graphql": "^15.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
