--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -46,6 +46,10 @@
     "@types/uuid": "^8.3.0",
     "jest": "^27.0.4",
     "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "@graphql-codegen/typescript-react-apollo": "2.2.7",
+    "@graphql-codegen/typescript-operations": "1.18.2",
+    "@graphql-codegen/typescript": "1.22.3",
+    "@graphql-codegen/introspection": "1.18.2"
   }
 }
