--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@libs/context": "^0.0.0",
+    "@libs/model": "^0.0.0",
     "@libs/react": "^0.0.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
