--- a/libs/gql/package.json
+++ b/libs/gql/package.json
@@ -15,5 +15,8 @@
   "peerDependencies": {
     "@apollo/client": "^3.3.20",
     "graphql": "^15.5.1"
+  },
+  "dependencies": {
+    "@libs/model": "^0.0.0"
   }
 }
