--- a/libs/react/package.json
+++ b/libs/react/package.json
@@ -4,7 +4,7 @@
   "description": "react stuff",
   "main": "dist/index",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p ./tsconfig.build.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 3000 --quiet",
     "build-storybook": "build-storybook"
@@ -16,6 +16,7 @@
     "@libs/gql": "^0.0.0",
     "@material-ui/core": "^4.11.4",
     "formik": "^2.2.9",
+    "lodash.clamp": "^4.0.3",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "yup": "^0.32.9"
@@ -31,6 +32,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@types/lodash.clamp": "^4.0.6",
     "babel-loader": "^8.2.2",
     "storybook-addon-apollo-client": "^4.0.8"
   }
