--- a/libs/react/package.json
+++ b/libs/react/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@libs/context": "^0.0.0",
     "@libs/gql": "^0.0.0",
+    "@libs/model": "^0.0.0",
     "@material-ui/core": "^4.11.4",
     "formik": "^2.2.9",
     "lodash.clamp": "^4.0.3",
