--- a/libs/context/package.json
+++ b/libs/context/package.json
@@ -10,7 +10,7 @@
   "author": "onichandame",
   "license": "MIT",
   "dependencies": {
-    "@libs/model": "^0.0.0",
+    "@libs/gql": "^0.0.0",
     "react": "^17.0.2"
   }
 }
